updated exceptions